--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="dist/bundle.js"></script>
+        <script src="dist/main.bundle.js"></script>
         <script src="dist/contact.bundle.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
